slider home pro no-js

--- a/ecoleinfographie/resources/assets/stylus/components/home/pros-home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/pros-home.styl
@@ -39,6 +39,30 @@
 /************************************\
 		slider-pros
 \************************************/
+.no-js
+  .home
+    .slider-pros
+      &__wrapper
+      &__bg
+        min-height 0
+      &__article
+        position relative
+        display: block
+        margin-bottom s(90)
+        min-height 0
+        overflow visible
+      &__description
+        float none
+        width 100%
+        position static
+        top: 0
+        &__inside
+          padding-left s(370)
+    .slider-pros-buttons
+    .slider-pros-dots
+      display: none
+
+
 .home
   .slider-pros
     &__wrapper
