add condition on count for graduated

--- a/ecoleinfographie/resources/assets/stylus/components/graduate.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/graduate.styl
@@ -105,6 +105,15 @@
       transition-property transform, opacity
 
 
+
+.graduate
+  .no-former-students
+    text-align center
+    & p
+      font-size s($sz8)
+
+
+
 /************************************\
 		NO-JS
 \************************************/
