correct some links

--- a/ecoleinfographie/resources/assets/stylus/base/_links.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_links.styl
@@ -23,8 +23,8 @@
     outline none
   &:hover:after
   &:focus:after
-    transform translateX(s(4, 12))
-    transition .3s ease transform
+    transform translateX(4px)
+    transition .3s ease transform;
 
 
 /************************************\
