no-js for page internship

--- a/ecoleinfographie/resources/assets/stylus/components/_form.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/_form.styl
@@ -227,3 +227,15 @@
     .form__submit
       padding s(25) s(15)
       width auto
+
+
+/************************************\
+		NO-JS
+\************************************/
+.no-js
+  .form__inputFile
+    width: auto
+    height: auto
+    opacity: 1
+    overflow visible
+    position: static
