--- a/ecoleinfographie/resources/assets/stylus/components/index_internship.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/index_internship.styl
@@ -145,7 +145,9 @@
     display block
 
 .no-js
-  .internship &
+  .internship
     .tab
       display: block
+      &--2
+        margin-top s(50)
 
