no-js for index realisation

--- a/ecoleinfographie/resources/assets/stylus/components/realisations/index-realisations.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/realisations/index-realisations.styl
@@ -347,3 +347,10 @@
         display: none
     &__item.active
       border 2px solid $cBlueCiel
+
+.no-js
+  .realisations
+    .load-more
+      display: none
+    .blog-pagination
+      margin 0 auto
