--- a/ecoleinfographie/resources/assets/stylus/components/blog/_blog-aside.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/_blog-aside.styl
@@ -399,4 +399,13 @@ a.ui-button:active,
 
 
 
-
+/************************************\
+		NO-JS
+\************************************/
+.no-js
+  .blog-category__list
+    height auto
+  .blog-tags__list
+    height auto
+  .blog-tags__item:nth-child(8)
+    margin-bottom auto
