--- a/ecoleinfographie/resources/assets/stylus/components/blog/blog-home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/blog-home.styl
@@ -6,6 +6,7 @@
   position relative
   float left
   max-width s(800)
+  width: 100%
   @media screen and (max-width 1260px)
     max-width s(735)
   @media screen and (max-width 1186px)
