fix bug form no-js

--- a/ecoleinfographie/resources/assets/stylus/components/blog/_comments.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/_comments.styl
@@ -290,3 +290,12 @@
     .comment__text
       max-width 100%
       margin 0
+
+
+.no-js
+  .postComment__label
+    top s(5, $sz9)
+    font-size s($sz9)
+    padding 0 s(14, $sz9)
+    transition .3s ease all
+    transition-property top, font-size
