add alert bandeau if no-js

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -46,6 +46,7 @@
 
 // Components
 @import "components/global.styl"
+@import "components/_alert.styl"
 @import "components/navigation.styl"
 @import "components/header.styl"
 @import "components/footer.styl"
