add other works same type

--- a/ecoleinfographie/resources/assets/stylus/components/realisations/post-realisation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/realisations/post-realisation.styl
@@ -270,13 +270,16 @@
 \************************************/
 
 .rea-others
-  margin-top s(180)
+  margin-top s(100)
   @media screen and (max-width 1024px)
     margin-top s(50)
   &__title
     @extend .titleExtraBold
     color $cBlueTitles
     margin-bottom s(50, $sz6);
+
+.rea-others--same
+  margin-top s(180)
 
 .work
   .reas
