--- a/ecoleinfographie/resources/assets/stylus/components/program.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/program.styl
@@ -88,7 +88,7 @@
       z-index 10
   &__figcaption
     background-color $cWhite
-    padding s(20) 0
+    padding s(25) 0
     text-align: center
     &:after
       content ''
@@ -101,6 +101,7 @@
       transition .2s ease height
     & span
       display: block
+      margin-bottom s(10, $sz9)
       font-size: s($sz9)
       color: $cBlack;
       text-transform: uppercase
