correct some bugs

--- a/ecoleinfographie/resources/assets/stylus/components/_wysiwyg.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/_wysiwyg.styl
@@ -194,3 +194,13 @@ $paddLArticle = 52
   & li
     margin-bottom s(5, $sz7)
     color $cWhite
+
+/************************************\
+		CODE
+\************************************/
+/*.blogArticle__body code
+  position: relative
+  color #0D47A1
+  font-size inherit
+  font-weight 500
+  font-family Hack*/
