correct bug orientation program

--- a/ecoleinfographie/resources/assets/stylus/components/program.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/program.styl
@@ -285,6 +285,7 @@
         text-align: center
         letter-spacing 1px
         text-transform: uppercase
+        line-height 1.2em
       &__course
         padding-left percentage(30/1070)
         &__name
